--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,14 +8,14 @@
         body {
             font-family: Arial, sans-serif;
             color: #333;
-            background-color: #e6f2e6;
+            background-color: #f0f7f0;
             margin: 0;
             padding: 0;
         }
         header {
-            background-color: #339933;
+            background-color: #4caf50; /* Softer green color */
             color: white;
-            padding: 20px 0;
+            padding: 30px 0;
             text-align: center;
         }
         .container {
@@ -27,8 +26,12 @@
         .intro {
             padding: 20px 0;
         }
-        h1, h2 {
-            color: #339933;
+        h1 {
+            color: #4caf50;
+            font-size: 3em; /* Larger title */
+        }
+        h2 {
+            color: #4caf50;
         }
         .section {
             background: white;
@@ -38,16 +41,16 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         footer {
-            background-color: #339933;
+            background-color: #4caf50;
             color: white;
             text-align: center;
-            padding: 10px 0;
+            padding: 5px 0; /* Smaller footer */
             position: fixed;
             width: 100%;
             bottom: 0;
         }
         a {
-            color: #339933;
+            color: #4caf50;
             text-decoration: none;
         }
     </style>
